Add Python .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,34 @@
-venv/
+# Byte-compiled / cache
 __pycache__/
+*.py[cod]
+*$py.class
+
+# Jupyter Notebook checkpoints
+.ipynb_checkpoints
+
+# Virtual environment
+.env
+.venv
+env/
+venv/
+ENV/
+
+# VS Code settings
+.vscode/
+
+# macOS junk
+.DS_Store
+
+# Logs
+*.log
+
+# Coverage / test
+htmlcov/
+.tox/
+.coverage
+.cache
+
+# Build
+build/
+dist/
+*.egg-info/
